# swagger/swagger.yml
@@ -12,20 +12,8 @@ paths:
       tags:
       - config
       description: 新建配置
-      operationId: ConfigController.新建配置
+      operationId: ConfigsController.新建配置
       parameters:
-      - in: formData
-        name: config_git_id
-        description: 配置仓库ID
-        required: true
-        type: integer
-        format: int64
-      - in: formData
-        name: config_process_id
-        description: 配置进程ID
-        required: true
-        type: integer
-        format: int64
       - in: formData
         name: content
         description: 配置json内容
@@ -36,56 +24,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Config'
-        "403":
-          description: 参数错误:缺失或格式错误
-  /configgit/add:
-    post:
-      tags:
-      - configgit
-      description: 新建配置仓库
-      operationId: ConfigGitController.新建配置仓库
-      parameters:
-      - in: formData
-        name: name
-        description: 配置仓库名称
-        required: true
-        type: string
-      - in: formData
-        name: service_module
-        description: 服务模块
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.ConfigGit'
-        "403":
-          description: 参数错误:缺失或格式错误
-  /configprocess/add:
-    post:
-      tags:
-      - configprocess
-      description: 新建配置进程
-      operationId: ConfigProcessController.新建配置进程
-      parameters:
-      - in: formData
-        name: name
-        description: 配置进程名称
-        required: true
-        type: string
-      - in: formData
-        name: config_git_id
-        description: 配置仓库ID
-        required: true
-        type: integer
-        format: int64
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.ConfigProcess'
+            $ref: '#/definitions/Response'
         "403":
           description: 参数错误:缺失或格式错误
   /depa/:
@@ -265,6 +204,9 @@ paths:
 definitions:
   '""':
     title: '""'
+    type: object
+  Response:
+    title: Response
     type: object
   json:
     title: json
